<resources>
    <string name="app_name">Serial Killer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_contact">Contact</string>
    <!--menu/action_bar_buttons.xml-->
    <string name="action_bar_buttons_setting">Settings</string>
    <string name="action_bar_buttons_contact">Contact Me</string>
    <string name="action_bar_buttons_credits">Credits</string>
    <string name="action_bar_buttons_about">About</string>
    <string name="back_button">Back</string>
    <!--activity_main-->
    <string name="button_new_game">New Game</string>
    <string name="button_join_game">Join Game</string>
    <string name="button_settings">Settings</string>
    <string name="button_contact_me">Contact me</string>
    <string name="button_about">About</string>
    <string name="button_credits">Credits</string>
    <string name="copyright">(c) 2018 Absolute Zero</string>
    <!--xml/pref_*.xml-->
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_key">general_key</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_notifications_key">notifications_key</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">New Player</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_ringtone_silent">Silent</string>
    <!--credits-->
    <string name="credits_message">• Google\n• Stackoverflow\n• https://material.io/icons(for icons)</string>
    <string name="exit_message">Do you really want to exit?</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <!--about.xml-->
    <string name="about_title">About</string>
    <string name="app_update">Check for Update</string>
    <string name="app_version">App Version</string>
    <string name="summary_placeholder" translatable="false">&#160;</string>
    <string name="version_summary" translatable="false">1.0.a</string>
    <!--contact-->
    <string name="contact_email_title">Email</string>
    <string name="contact_email_summary">Tap here to send me an email</string>
    <string name="contact_facebook_title">Facebook</string>
    <string name="contact_facebook_summary">Follow me on Facebook</string>
    <string name="contact_telegram_title">Telegram</string>
    <string name="contact_telegram_summary">Got any query? Tap here to send an instant message on telegram.</string>
    <!--update-->
    <string name="android_auto_update_dialog_title">New version found</string>
    <string name="android_auto_update_dialog_btn_download">Download now</string>
    <string name="android_auto_update_dialog_btn_cancel">Later</string>
    <string name="android_auto_update_download_progress">Downloading:%1$d%%</string>
    <string name="android_auto_update_toast_no_new_update">No new update</string>
    <string name="android_auto_update_dialog_checking">Checking</string>
</resources>
