<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/background">

    <Button
        android:id="@+id/new_game"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_new_game" />

    <Button
        android:id="@+id/join_game"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_below="@+id/new_game"
        android:layout_centerHorizontal="true"
        android:text="@string/button_join_game" />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_below="@+id/join_game"
    android:layout_centerHorizontal="true">

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_drawable"
        android:textColor="@color/white"
        android:text="@string/button_settings" />

    <Button
        android:id="@+id/contact_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/settings"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_drawable"
        android:textColor="@color/white"
        android:text="@string/button_contact_me" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/contact_me"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_drawable"
        android:textColor="@color/white"
        android:text="@string/button_about" />

    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/contact_me"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_drawable"
        android:textColor="@color/white"
        android:text="@string/button_credits" />
</RelativeLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:text="@string/copyright" />


</RelativeLayout>
